--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -60,6 +61,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-calendar-picker": "^8.0.0",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "expo-module-scripts": "^4.0.4",
