--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,37 +18,38 @@
     "@expo/vector-icons": "^14.0.2",
     "@gluestack-ui/config": "^1.1.20",
     "@google/generative-ai": "^0.24.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.37",
+    "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
     "immer": "^10.1.1",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.8",
     "react-native-animatable": "^1.4.0",
     "react-native-calendar-picker": "^8.0.5",
+    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
@@ -64,9 +65,10 @@
     "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "~52.0.6",
     "nativewind": "^4.1.23",
     "postcss": "^8.5.3",
     "react-test-renderer": "18.3.1",
